# ml-service

./: README.md  samconfig.toml  template.yaml
rust_app/: Cargo.toml
rust_app/src/: get_handler.rs  lib.rs  put_handler.rs  put_s3_handler.rs
