[package]
name = "ml_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.30.0"
aws-sdk-s3 = "0.30.0"
aws-smithy-client = { version = "0.55.1", features = ["test-util"] }
lambda_http = "0.8.0"
lambda_sqs = "0.2.3"
lambda_runtime = "0.7.2"
tokio = { version = "1.21.1", features = ["full"] }
serde = "1.0.152"
serde_json = "1.0.91"
aws_lambda_events = "0.7.2"
async-trait = "0.1.51"

mockall = "0.11.3"

tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "trace"] }
opentelemetry-aws = "0.7.0"
opentelemetry-http = "0.8.0"
opentelemetry-semantic-conventions = "0.11.0"
opentelemetry-otlp = { version = "0.12.0", features = ["http-proto", "reqwest-blocking-client"] }
gethostname = "0.4.1"
opentelemetry_sdk = { version = "0.19.0", features = ["trace", "rt-tokio-current-thread"] }

[dev-dependencies]
aws-smithy-http = "0.52.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
http = "0.2.8"

[[bin]]
name = "put"
path = "src/put_handler.rs"

[[bin]]
name = "get"
path = "src/get_handler.rs"

[[bin]]
name = "put_s3"
path = "src/put_s3_handler.rs"